[gd_scene load_steps=36 format=2]

[ext_resource path="res://menus/main_titleOut.png" type="Texture" id=1]
[ext_resource path="res://Playground.gd" type="Script" id=2]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemies/Fly.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemies/Follow.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 1920, 581 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 581, 1920, 581 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1162, 1920, 581 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1743, 1920, 581 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 2324, 1920, 581 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 2905, 1920, 581 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 3486, 1920, 581 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 4067, 1920, 581 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 4648, 1920, 581 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 5229, 1920, 581 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 5810, 1920, 581 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 6391, 1920, 581 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 6972, 1920, 581 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 7553, 1920, 581 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 8134, 1920, 581 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 8715, 1920, 581 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 9296, 1920, 581 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 9877, 1920, 581 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 10458, 1920, 581 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 11039, 1920, 581 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 11620, 1920, 581 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 12201, 1920, 581 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 12782, 1920, 581 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 13363, 1920, 581 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 13944, 1920, 581 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 14525, 1920, 581 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 15106, 1920, 581 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 15687, 1920, 581 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": false,
"name": "titleOut",
"speed": 30.0
} ]

[sub_resource type="Curve2D" id=30]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -40, -40, 0, 0, 0, 0, 1960, -40, 0, 0, 0, 0, 1960, 1120, 0, 0, 0, 0, -40, 1120, 0, 0, 0, 0, -40, -40 )
}

[node name="Playground" type="Node2D"]
script = ExtResource( 2 )
enemy_fly = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.113725, 0.815686, 0.85098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleSequence" type="AnimatedSprite" parent="."]
position = Vector2( 960, 363 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 29 )
animation = "titleOut"

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 960, 720 )

[node name="Follow" parent="." instance=ExtResource( 5 )]
position = Vector2( 2000, -100 )

[node name="EnemySpawn" type="Path2D" parent="."]
curve = SubResource( 30 )

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemySpawn"]
position = Vector2( -40, -40 )

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 1.2
autostart = true

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[node name="TotalPlaytimeTimer" type="Timer" parent="."]
autostart = true
[connection signal="animation_finished" from="TitleSequence" to="." method="_on_TitleSequence_animation_finished"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="TotalPlaytimeTimer" to="." method="_on_TotalPlaytimeTimer_timeout"]
